<resources>
    <string name="app_name">VT Shop</string>
    <string name="name_welcome_1">Chào mừng bạn trở lại\nVT Shop</string>
    <string name="name_welcome_2">Hãy bắt đầu mua sắm ngay hôm nay!</string>
    <string name="home">Trang chủ</string>
    <string name="category">Danh mục</string>
    <string name="cart">Giỏ hàng</string>
    <string name="account">Tài khoản</string>
    <string name="account_name">Chu Văn Thơm</string>
    <string name="my_account">Tài khoản của tôi</string>
    <string name="my_profile">Thông tin tài khoản</string>
    <string name="search">Tìm kiếm</string>
    <string name="product_outstanding">Sản phẩm nổi bật</string>
    <string name="product_suggest">Gợi ý hôm nay</string>
    <string name="search_name">Nhập tên sản phẩm cần tìm…</string>
    <string name="into_money">Thành tiền</string>
    <string name="_0">0</string>
    <string name="title_pay">Thanh toán</string>
    <string name="detail_product">Chi tiết sản phẩm</string>
    <string name="count_0">0</string>
    <string name="buy_now">Mua ngay</string>
    <string name="add_cart">Thêm vào giỏ</string>
    <string name="todo">TODO</string>
    <string name="count_1">1</string>
    <string name="h_ng_s_n_xu_t">Hãng sản xuất:</string>
    <string name="apple">Apple</string>
    <string name="_12_th_ng">12 tháng</string>
    <string name="b_o_h_nh">Bảo hành:</string>
    <string name="account_email">vanthom2210@gmail.com</string>
    <string name="log_out">Đăng xuất</string>
    <string name="other">Khác</string>
    <string name="login">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="ok_up">ĐỒNG Ý</string>
    <string name="close">ĐÓNG</string>
    <string name="_9">9</string>
    <string name="show_more">Hiện thị thêm</string>
    <string name="related_products">Sản phẩm liên quan</string>
    <string name="name">Họ, tên</string>
    <string name="hint_text_name">Vd: Nguyễn Văn A</string>
    <string name="email">Email</string>
    <string name="hint_text_email">Vd: example@gmail.com</string>
    <string name="password">Mật khẩu</string>
    <string name="hint_text_password">Vd: abc123@#%</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="share">Chia sẻ</string>
    <string name="settings_app">Cài đặt ứng dụng</string>
    <string name="language">Ngôn ngữ</string>
    <string name="info_app">Thông tin ứng dụng</string>
    <string name="notification">Thông báo</string>
    <string name="username">Username</string>
</resources>