<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.auth.IntroActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background"
        android:contentDescription="@string/todo"
        />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/white_line"
        android:importantForAccessibility="no"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_welcome_1"
        android:textSize="36sp"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="32dp"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_welcome_2"
        android:textSize="24sp"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="32dp"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/title_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_change_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:padding="16dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        android:background="@drawable/bg_btn_submit"
        android:backgroundTint="#00A9FF"
        android:layout_margin="24dp"
        app:layout_constraintBottom_toTopOf="@id/btn_to_change_register"
        style="@android:style/Widget.Button"
        tools:targetApi="lollipop"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_change_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:padding="16dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        android:background="@drawable/bg_btn_submit"
        android:backgroundTint="#79CDF8"
        android:layout_margin="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@android:style/Widget.Button"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>