<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/container_dialog_alert_logout"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/bg_dialog"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/log_out"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="Bạn có muốn kết thúc phiên đăng nhập này không?"
            tools:ignore="HardcodedText"
            android:textColor="@color/black"
            android:textSize="20sp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:background="@drawable/bg_btn_logout_account"
            android:backgroundTint="@color/primary_color"
            android:text="@string/ok_up"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            style="@android:style/Widget.Button"
            tools:targetApi="lollipop"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/primary_color"
            android:text="@string/close"
            android:textColor="@color/primary_color"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            style="@android:style/Widget.Button"
            tools:targetApi="lollipop"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>