<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.auth.LoginActivity">

    <LinearLayout
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/bg_login_register"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/logo" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="36dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62"
        tools:layout_editor_absoluteX="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto"
                android:text="@string/sign_up"
                android:textColor="@color/primary_color"
                android:textSize="32sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/box">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="Username"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="Vd: vtshop123"
                    android:maxLength="100"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/hint_text_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_edittext"
                    android:drawableEnd="@drawable/icon_hide_24"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/hint_text_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_submit_register"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/bg_btn_submit"
                    android:fontFamily="@font/roboto"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal">
                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@color/gray_light" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:text="Hoặc"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/text_color"
                        android:textSize="18sp" />
                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@color/gray_light" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/btn_facebook"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/bg_social_btn"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="8dp"
                            android:importantForAccessibility="no"
                            android:src="@drawable/facebook" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:fontFamily="@font/roboto"
                            android:text="@string/facebook"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:ignore="NestedWeights" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_google"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="12dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/bg_social_btn"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="8dp"
                            android:importantForAccessibility="no"
                            android:src="@drawable/google" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:fontFamily="@font/roboto"
                            android:text="@string/google"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:ignore="NestedWeights" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="Bạn đã có tài khoản? "
            android:textColor="@color/primary_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_change_tab_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/login"
            android:textColor="@color/primary_color"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>